Permitimos al usuario listar sus videojuegos y operaciones, hacemos un check a la hora de actualizar el email y cambiamos la ruta de los archivos json para que se encuentren en Data

--- a/Presentation/Gamedream.Presentation.csproj
+++ b/Presentation/Gamedream.Presentation.csproj
@@ -2,9 +2,23 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Models\Gamedream.Models.csproj" />
-    <ProjectReference Include="..\Business\Gamedream.Business.csproj" />
-    
+    <ProjectReference Include="..\Business\Gamedream.Business.csproj" />   
   </ItemGroup>
+  
+ <ItemGroup> 
+<None Update= "../Data/videogames.json">
+  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+  </ItemGroup>
+
+  <ItemGroup>
+
+  <None Update= "../Data/users.json">
+  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+  </ItemGroup>
+  
+
 
   
 
