--- a/Presentation/Gamedream.Presentation.csproj
+++ b/Presentation/Gamedream.Presentation.csproj
@@ -2,32 +2,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Models\Gamedream.Models.csproj" />
-    <ProjectReference Include="..\Business\Gamedream.Business.csproj" />   
-  </ItemGroup>
-  
- <ItemGroup> 
-<None Update= "../Data/videogames.json">
-  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-  </None>
+    <ProjectReference Include="..\Business\Gamedream.Business.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-
-  <None Update= "../Data/users.json">
-  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-  </None>
+ <ItemGroup>
+    <None Include="users.json" CopyToPublishDirectory="Always" />
+    <None Include="videogames.json" CopyToPublishDirectory="Always"/>
+    <None Include="logs.json" CopyToPublishDirectory="Always" />
   </ItemGroup>
   
-
-
-  
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    
+
 
   </PropertyGroup>
 
